fix display issue on mobile

--- a/server_files/css/form.css
+++ b/server_files/css/form.css
@@ -54,9 +54,6 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    border: solid;
-    border-width: 1px;
-    border-radius: 5px;
     margin-top: 1em;
     margin-bottom: 1em;
   }
@@ -122,15 +119,24 @@
     font-size: 24px;    
   }
 
-  @media screen and (max-width:1100px){
+  hr{
+    width: 60%;
+  }
+
+  @media screen and (max-width:790px){
     input[type = "text"], input[type = "password"],input[type="submit"],button,label{
       font-size: 3vw;
       width: 98%;
     }
-    table{
+    table, hr{
       width: 98%;
+    }
+    .oneRow{
+      margin-left: 0%;
     }
 
   }
+
+
 
 
