--- a/server_files/css/mycss.css
+++ b/server_files/css/mycss.css
@@ -1,3 +1,8 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 html *
 {
    /*font-size: 1em !important;
@@ -279,7 +284,7 @@ div.footer>div.links{
 }
 
 .att-outer{
-  padding: 3em;
+  padding-top: 3em;
   width: 80vw;
   position: relative;
   margin-left: auto;
